# pytest-datafiles

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest_datafiles.py  runtests.py  setup.py  test_pytest_datafiles.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/readme/: README.rst  conf.py
examples/: example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_upgradev3.py
examples/_fixture_files/dir1/: fileB
tests/: conftest.py  test_examples.py  test_pytest_datafiles.py
tests/_fixture_files/: executable.sh  huckleberry.txt
tests/_fixture_files/dir1/: file1  file2  file3
tests/_fixture_files/dir2/: file4  file5  file6
tests/_fixture_files/dir3/: file1  file4
tests/examples/: conftest.py  example_1.py  example_4.py  test_example_1.py  test_example_2.py  test_example_3.py  test_example_4.py  test_example_5.py  test_example_upgradev3.py
