[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-datafiles"
version = "3.0.1"
description = "py.test plugin to create a 'tmp_path' containing predefined files/directories."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Omar Kohl", email = "omarkohl@gmail.com" },
]
maintainers = [
    { name = "Omar Kohl", email = "omarkohl@gmail.com" },
]
keywords = ["pytest", "datafiles", "tmp_path"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/omarkohl/pytest-datafiles"
Repository = "https://github.com/omarkohl/pytest-datafiles"
Issues = "https://github.com/omarkohl/pytest-datafiles/issues"

[project.entry-points.pytest11]
pytest_datafiles = "pytest_datafiles"

[tool.hatch.build.targets.wheel]
packages = ["pytest_datafiles.py"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["pytest_datafiles"]

[tool.coverage.run]
branch = true
source = ["pytest_datafiles"]
